--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "scripts": {
     "start": "cross-env NODE_ENV=production node ./src/main.js",
-    "start:dev": "cross-env NODE_ENV=development nodemon ./src/main.js"
+    "start:dev": "cross-env NODE_ENV=development nodemon --ignore database.json ./src/main.js"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
@@ -19,6 +19,7 @@
     "dotenv": "^16.0.3",
     "fluent-ffmpeg": "^2.1.2",
     "openai": "^3.2.1",
-    "telegraf": "^4.12.2"
+    "telegraf": "^4.12.2",
+    "telegraf-session-local": "^2.1.1"
   }
 }
