--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "axios": "^1.4.0",
+    "debug": "^4.3.4",
     "dotenv": "^16.0.3",
     "fluent-ffmpeg": "^2.1.2",
     "openai": "^3.2.1",
