--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cross-env": "^7.0.3",
     "debug": "^4.3.4",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "fluent-ffmpeg": "^2.1.2",
     "openai": "^3.2.1",
     "telegraf": "^4.12.2",
