--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "cross-env NODE_ENV=production node src/bot.js",
-    "start:dev": "cross-env NODE_ENV=development nodemon --ignore database.json src/bot.js"
+    "start:dev": "cross-env NODE_ENV=development nodemon --ignore 'assets/*' src/bot.js"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
